Update MediaController
* adding related models (country,keyword,language,company) add,remove methods to media controller
